Fix mobile wrapping issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,15 @@
    padding-top: 1em;
  }
 
+ .bingo-card-actions {
+   display: flex;
+   flex-wrap: wrap;
+   margin-bottom: 1rem;
+   & .text-actions {
+     padding: 0.8rem 0 0 1rem;
+   }
+ }
+
  label {
    color: #000;
  }
